--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
     <br>
     <a href="07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/index.html">
         01 - The Bootstrap Carousel Part 1</a> <br>
+    <a href="07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/index.html">
+        02 - The Bootstrap Carousel Part 2</a> <br>
 
 </body>
 
