--- a/07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/index.html
+++ b/07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="carousel-item">
           <h2>My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="https://i.imgur.com/PndOlxe.jpg" alt="lady-profile">
+          <img class="testimonials-image" src="https://i.imgur.com/PndOlxe.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
       </div>
