--- a/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
+++ b/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
@@ -157,7 +157,7 @@
         </div>
       </div>
   
-      <div class="card">
+      <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-header">
           <h3>Labrador</h3>
         </div>
@@ -170,7 +170,7 @@
         </div>
       </div>
   
-      <div class="card">
+      <div class="card col-lg-4 col-md-12 col-sm-12">
         <div class="card-header">
           <h3>Mastiff</h3>
         </div>
