--- a/07 - Intermediate Bootstrap/04 - The CSS Z-Index and Stacking Order/index.html
+++ b/07 - Intermediate Bootstrap/04 - The CSS Z-Index and Stacking Order/index.html
@@ -13,7 +13,7 @@
     
     <!-- CSS Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/ec40e74e14.js" crossorigin="anonymous"></script>
